# RustyAPI

./: Cargo.toml  README.md  auth.rs  database.rs  handlers.rs  main.rs  models.rs  routes.rs
