[package]
name = "rustyapi-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.12.0"
jsonwebtoken = "7.2.0"
chrono = { version = "0.4", features = ["serde"] }
sqlite = "0.23.0"
